Add delete and up/down buttons in device list

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -116,6 +116,7 @@
                                     <th data-name="name"     class="translate" style="width: 120px; white-space: nowrap">Name</th>
                                     <th data-name="ip"       class="translate">IP Address</th>
                                     <th data-name="port"     class="translate" style="width: 70px">Port</th>
+                                    <th data-buttons="delete up down" style="width: 120px"></th>
                                 </tr>
                                 </thead>
                             </table>
